--- a/src/app/index.css
+++ b/src/app/index.css
@@ -262,3 +262,39 @@
     @apply bg-background text-foreground font-sans antialiased;
   }
 }
+
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em hsl(43 96% 56% / 0.6));
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em hsl(43 96% 56% / 0.6));
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+}
